Added parameters config in Flask web demo

--- a/src/www/templates/execute.html
+++ b/src/www/templates/execute.html
@@ -25,6 +25,18 @@
         </div>
         <div class="row mt-4">
             <div class="col">
+                <h4><span class="badge badge-info">Beam size</span></h4>
+                <p>{{ beam_size }}</p>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col">
+                <h4><span class="badge badge-info">Max length</span></h4>
+                <p>{{ maxlen }}</p>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col">
                 <h4><span class="badge badge-info">Output sequence</span></h4>
                 <p>{{ output }}</p>
             </div>
