--- a/src/www/templates/index.html
+++ b/src/www/templates/index.html
@@ -36,14 +36,33 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-4">
+            <div class="col">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Beam size</span>
+                    </div>
+                    <input class="form-control" type="text" id="beam_size" placeholder="Beam size" value="1">
+                </div>
+            </div>
+            <div class="col">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Max length</span>
+                    </div>
+                    <input class="form-control" type="text" id="maxlen" placeholder="Max length" value="20">
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 </div>
 
 
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script>
     $('#submit').click(() => {
-        window.location = 'execute?question=' + $('#question').val() + '&sample_id=' + $('#sample_id').html()
+        window.location = 'execute?question=' + $('#question').val() + '&sample_id=' + $('#sample_id').html() + '&beam_size=' + $('#beam_size').val() + '&maxlen=' + $('#maxlen').val()
     })
 </script>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
