New Web Server. Powerful & Flexible.

--- a/src/www/templates/execute.html
+++ b/src/www/templates/execute.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>VQA Frontend</title>
+    <title>VQA Frontend - Home</title>
     <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 </head>
 <body>
