Fixed small bug in WebServer

--- a/src/www/templates/interact.html
+++ b/src/www/templates/interact.html
@@ -9,7 +9,9 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col text-center">
-            <h2 class="text-white">Towards Open-Ended VQA Models using Transformers</h2>
+            <a href="/" class="text-decoration-none">
+                <h2 class="text-white">Towards Open-Ended VQA Models using Transformers</h2>
+            </a>
         </div>
     </div>
     <div class="row mt-5 justify-content-center">
