--- a/src/www/templates/interact.html
+++ b/src/www/templates/interact.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="row mt-5 justify-content-center">
-        <div class="col-6">
+        <div class="col-6 text-center">
             <img src="{{ url_for('static', filename=target) }}"
                  class="img-fluid rounded shadow-lg">
         </div>
