--- a/src/www/templates/index.html
+++ b/src/www/templates/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <title>VQA Web Frontend - Home</title>
     <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 </head>
 <body class="bg-dark">
+<nav class="navbar navbar-light bg-light">
+    <div class="container">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="navbar-brand" href="/"><i class="fa fa-home"></i> Home</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="navbar-brand" href="https://github.com/ab3llini"><i class="fa fa-github"></i> Alberto Bellini</a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
 <div class="container">
     <div class="row mt-5">
         <div class="col text-center">
             <h2 class="text-white">Towards Open-Ended VQA Models using Transformers</h2>
+            <h6 class="text-white font-weight-bold">Politecnico di Milano</h6>
+            <h6 class="text-white font-weight-bold">University of Illinois at Chicago</h6>
+
         </div>
     </div>
     <div class="row mt-5">
