--- a/src/www/templates/interact.html
+++ b/src/www/templates/interact.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <title>VQA Web Frontend - Interact</title>
     <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="bg-dark">
-<div class="container">
-    <div class="row mt-5">
-        <div class="col text-center">
-            <a href="/" class="text-decoration-none">
-                <h2 class="text-white">Towards Open-Ended VQA Models using Transformers</h2>
-            </a>
-        </div>
+<nav class="navbar navbar-light bg-light">
+    <div class="container">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="navbar-brand" href="/"><i class="fa fa-home"></i> Home</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="navbar-brand" href="https://github.com/ab3llini"><i class="fa fa-github"></i> Alberto Bellini</a>
+            </li>
+        </ul>
+
     </div>
+</nav>
+<div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-6 text-center">
             <img src="{{ url_for('static', filename=target) }}"
@@ -25,63 +34,87 @@
             <form method="POST" action="/interact/{{ target }}">
                 <div class="input-group">
                     {% if question is defined %}
-                    <input type="text" class="form-control" name="question" placeholder="{{ question }}">
+                        <input type="text" class="form-control" name="question" placeholder="{{ question }}">
                     {% else %}
-                    <input type="text" class="form-control" name="question" placeholder="Ask me something..">
+                        <input type="text" class="form-control" name="question" placeholder="Ask me something..">
                     {% endif %}
                     <div class="input-group-append">
-                        <input type="submit" class="btn btn-primary" value="Go">
+                        <button class="btn btn-primary" type="button">
+                            <span class="default">Go!</span>
+                            <span class="processing d-none">
+                                <span class="spinner-border spinner-border-sm" role="status"
+                                      aria-hidden="true"></span>
+                                Processing...
+                            </span>
+                        </button>
                     </div>
                 </div>
             </form>
             <div class="mt-3 text-center">
-                <p class="text-white">Hey, the first run is gonna be slow since we need to initialize some stuff..</p>
+                <p class="text-white">Hey, I can generate stuff even if you don't ask me anything</p>
             </div>
         </div>
     </div>
     {% if answers is defined %}
-    {% for model, outputs in answers.items() %}
-    <div class="row mt-3">
-        <div class="col">
-            <div class="card">
-                <div class="card-header">
-                    {{ model }}
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="{{ url_for('static', filename=outputs['images'][0]) }}"
-                                 class="img-fluid rounded shadow-lg">
+        {% for model, outputs in answers.items() %}
+            <div class="row mt-3">
+                <div class="col">
+                    <div class="card">
+                        <div class="card-header">
+                            {{ model }}
                         </div>
-                        <div class="col">
-                            <div class="row no-gutters">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-2">
+                                    <img src="{{ url_for('static', filename=outputs['images'][0]) }}"
+                                         class="img-fluid rounded shadow-lg">
+                                </div>
                                 <div class="col">
-                                    <h5><span class="badge badge-primary">Answer</span></h5>
-                                    <p class="font-weight-bold">{{ outputs['answer'] }}
-                                    <p>
+                                    <div class="row no-gutters">
+                                        <div class="col">
+                                            <h5><span class="badge badge-primary">Answer</span></h5>
+                                            <p class="font-weight-bold">{{ outputs['answer'] }}
+                                            <p>
+                                        </div>
+                                    </div>
+                                    {% for additional in outputs['images'][1:] %}
+                                        <div class="row no-gutters">
+                                            <div class="col">
+                                                <h5><span class="badge badge-primary">Additional images</span></h5>
+                                                <img src="{{ url_for('static', filename=additional) }}"
+                                                     class="img-fluid rounded">
+                                            </div>
+                                        </div>
+                                    {% endfor %}
                                 </div>
                             </div>
-                            {% for additional in outputs['images'][1:] %}
-                            <div class="row no-gutters">
-                                <div class="col">
-                                    <h5><span class="badge badge-primary">Additional images</span></h5>
-                                    <img src="{{ url_for('static', filename=additional) }}"
-                                         class="img-fluid rounded">
-                                </div>
-                            </div>
-                            {% endfor %}
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    {% endfor %}
+        {% endfor %}
     {% endif %}
     <div class="row mt-5"></div>
 </div>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script>
+    $(document).ready(function () {
+        function submit(elem) {
+            $(elem).children('.default').hide()
+            $(elem).addClass('disabled')
+            $(elem).children('.processing').removeClass('d-none')
+            $('form').submit()
+        }
+
+        $(document).keypress(function (e) {
+            if (e.which == 13) {
+                submit($('form button'))
+            }
+        });
+        $('form button').click(function () {
+            submit(this)
+        })
+    });
 </script>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 </body>
